--- a/game.css
+++ b/game.css
@@ -7,7 +7,6 @@
 
 /* .............................  */
 
-
 #top {
     display: flex;
     align-items: center;
@@ -110,9 +109,8 @@
   }
   .smallImg {
       width: 40px;
-      /* height: 150px; */
       position: absolute;
-      /* background-color: #906d6d; */
+     
   }
   
   /* ..........................  */
@@ -147,6 +145,9 @@
     background-image: url("./images/background-img.avif");
     height: 100vh;
     width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   
   /* ..........................  */
